melhorias Ux/Ui

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,8 @@
 <!-- Toolbar -->
-<div class="toolbar" role="banner">
+<div class="toolbar custom-bar-color" role="banner">
+    <a class="navbar-brand" style="margin-left: auto;" href="#">
+      <img src="favicon.ico" width="30" height="30" alt="">
+    </a>
 </div>
 
 <div class="content" role="main">
