--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Toolbar -->
-<div class="toolbar custom-bar-color" role="banner">
-    <a class="navbar-brand" style="margin-left: auto;" href="#">
-      <img src="favicon.ico" width="30" height="30" alt="">
+<div class="toolbar custom-bar-color" style="height: 41px;" role="banner">
+    <a class="navbar-brand navbar-brand-just" style="margin-left: auto;" href="#">
+      <img src="favicon.ico" width="28" height="28" alt="">
     </a>
 </div>
 
