--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -274,6 +274,10 @@ svg#clouds {
   );
 }
 
+.navbar-brand-just {
+  padding-top: 0;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 767px) {
   .card-container > *:not(.circle-link),
